--- a/themes/hugoplate/layouts/_partials/components/author-card.html
+++ b/themes/hugoplate/layouts/_partials/components/author-card.html
@@ -1,7 +1,7 @@
-<div class="bg-light dark:bg-darkmode-light rounded p-8 text-center">
+<div class="bg-light dark:bg-darkmode-light rounded p-8 text-center h-full">
   {{ $image:= .Params.image }}
   {{ if $image }}
-    {{ partial "image" (dict "Src" $image "Context" .Page "Alt" .Title "Class" "mx-auto mb-6 rounded" "size" "120x120") }}
+    {{ partial "image" (dict "Src" $image "Context" .Page "Alt" .Title "Class" "mx-auto mb-6 rounded object-cover" "size" "120x120") }}
   {{ else if .Params.Email }}
     <img
       class="mx-auto mb-6 rounded"
@@ -10,15 +10,46 @@
       width="120"
       src="https://www.gravatar.com/avatar/{{ md5 .Params.email }}?s=128&pg&d=identicon" />
   {{ end }}
+  
   <h4 class="mb-3">
-    <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+    <!-- 이름: 다크모드에서 흰색(dark:text-white) -->
+    <a href="{{ .RelPermalink }}" class="text-dark dark:text-white hover:text-primary transition">
+      {{ .Title }}
+    </a>
   </h4>
-  <p class="mb-4">
-    {{ .Summary | plainify }}
-  </p>
+
+  <!-- [수정됨] 1. 역할 -->
+  <!-- 기존 text-primary가 어두우면 안 보일 수 있으므로, 다크모드에선 흰색이나 밝은색으로 고정 -->
+  {{ with .Params.role }}
+    <p class="mb-3 text-primary dark:text-white font-bold text-sm">
+      {{ . }}
+    </p>
+  {{ end }}
+
+  <!-- [수정됨] 2. 경력 리스트 -->
+  {{ if .Params.career }}
+    <div class="mb-6 flex justify-center">
+      <!-- 
+        text-text : 라이트 모드용 (진한 회색)
+        dark:text-white : 다크 모드용 (흰색) 
+      -->
+      <ul class="text-left list-disc pl-4 text-sm text-text dark:text-white space-y-1">
+        {{ range .Params.career }}
+          <li>{{ . }}</li>
+        {{ end }}
+      </ul>
+    </div>
+  {{ else }}
+    <!-- 요약글 -->
+    <p class="mb-4 text-text dark:text-white">
+      {{ .Summary | plainify }}
+    </p>
+  {{ end }}
+
   <ul class="social-icons">
     {{ range .Params.social }}
-      <li>
+      <li class="inline-block mx-1">
+        <!-- 아이콘: 다크모드에서 흰색 -->
         <a href="{{ .link | safeURL }}" target="_blank" rel="noopener nofollow">
           <span class="sr-only">{{ .title }}</span>
           <i class="{{ .icon }}"></i>
