--- a/themes/hugoplate/layouts/blog/list.html
+++ b/themes/hugoplate/layouts/blog/list.html
@@ -1,28 +1,18 @@
 {{ define "main" }}
   {{ partial "page-header" . }}
 
-
   <section class="section">
     <div class="container">
-      <div class="row gx-5">
-        <!-- blog posts -->
-        <div class="lg:col-8">
-          <div class="row">
-            {{ $paginator:= .Paginate .RegularPages }}
-            {{ range $paginator.Pages }}
-              <div class="md:col-6 mb-14">
-                {{ partial "components/blog-card" . }}
-              </div>
-            {{ end }}
+      <div class="row">
+        <!-- 
+           [수정] .ByWeight 사용 
+           Front Matter에 weight: 1, weight: 2 등을 주면 그 순서대로 정렬됩니다.
+        -->
+        {{ range .RegularPages.ByWeight }}
+          <div class="md:col-6 lg:col-4 mb-14">
+            {{ partial "components/author-card" . }}
           </div>
-          {{ partial "components/pagination.html" . }}
-        </div>
-        <!-- sidebar -->
-        <div class="lg:col-4">
-          <!-- widget -->
-          {{ $widget:= site.Params.widgets.sidebar }}
-          {{ partialCached "widgets/widget-wrapper" ( dict "Widgets" $widget "Scope" . ) }}
-        </div>
+        {{ end }}
       </div>
     </div>
   </section>
