--- a/themes/hugoplate/layouts/presidents/list.html
+++ b/themes/hugoplate/layouts/presidents/list.html
@@ -1,16 +1,25 @@
+{{/* layouts/authors/list.html (or your members page list template) */}}
+
 {{ define "main" }}
   {{ partial "page-header" . }}
 
-
-  <section class="section">
+  <section class="section pt-14 pb-20">
     <div class="container">
-      <div class="row">
-        {{ range .RegularPages }}
-          <div class="md:col-6 lg:col-4 mb-14">
-            {{ partial "components/author-card" . }}
-          </div>
+
+      <!-- top description -->
+      <div class="max-w-3xl mx-auto text-center mb-16">
+        <div class="content text-lg text-text dark:text-white/90">
+          {{ .Content }}
+        </div>
+      </div>
+
+      <!-- members grid -->
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+        {{ range .RegularPages.ByWeight }}
+          {{ partial "components/author-card" . }}
         {{ end }}
       </div>
+
     </div>
   </section>
 {{ end }}
